fix y-overflow

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 }
 
 html, body {
-    height: 100vh;
+    height: 100%;
     width: 100vw;
 }
 
@@ -59,6 +59,10 @@ body {
 }
 
 @media screen and (max-width: 888px) {
+    :root {
+        font-size: 12px;
+    }
+
     .dashboard-icon {
         margin: auto;
     }
@@ -80,10 +84,6 @@ body {
         margin: auto;
     }
 
-    :root {
-        font-size: 12px;
-    }
-
     .container {
         align-items: center;
         padding-left: 0;
@@ -101,7 +101,7 @@ body {
     }
 }
 
-@media screen and (max-width: 457px) {
+@media screen and (max-width: 550px) {
     :root {
         font-size: 10px;
     }
@@ -180,6 +180,10 @@ body {
 #navbar {
     grid-area: nav;
     background: pink;
+
+    padding: 2rem;
+    padding-left: 4rem;
+    padding-right: 4rem;
 }
 
 .nav-icons {
@@ -192,7 +196,7 @@ body {
     display: flex;
     gap: 2rem;
 
-    margin: 2rem
+    margin-bottom: 2rem;
 }
 
 .nav-up-one {
@@ -208,6 +212,7 @@ body {
 
     display: flex;
     align-items: center;
+    justify-content: flex-end;
     gap: 3rem
 }
 
@@ -228,7 +233,6 @@ img[alt="pfp"] {
     width: 50px;
     height: 50px;
     object-fit: cover;
-    object-position: 0% 0%;
     border-radius: 50%;
 }
 
@@ -236,6 +240,39 @@ img[alt="pfp"] ~ h1 {
     display: inline;
     font-weight: 600;
     font-size: 15px;
+}
+
+.nav-down {
+    display: flex;
+}
+.nav-down-one {
+    flex: 1;
+
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 2rem;
+}
+
+#greeting > h1 {
+    font-weight: 600;
+    font-size: 20px;
+}
+
+#greeting > h5 {
+    font-weight: 600;
+    font-size: 10px;
+}
+
+.nav-down-two {
+    flex: 2;
+}
+
+img[alt="pfp2"] {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 50%;
 }
 
 #content {
